# democratic-caller

./: .gitignore  README.md  app.py  build.bat  dockerfile  pyproject.toml  start.bat
src/: api.py  config.py  democratic.py  logger.py  model.py
src/utils/: common.py  ip_utils.py  keyboard.py  keyboard_advance.py  keyboard_advance_2.py
static/: index.html  stratagem.json
tools/: build.py  gen_stratagem.py
